:recycle: refactor: Organiza diretório dos pacotes